# locr

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
locr/: __init__.py  constants.py  exceptions.py  handlers.py  locr.py
locr/locr.egg-info/: PKG-INFO  SOURCES.txt
