[metadata]
name = locr
version = 0.1.0
author = Andromeda Yelton
description = Tools for fetching OCRed text of Library of Congress items.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thatandromeda/locr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = locr
packages = find:
python_requires = >=3.0

[options.packages.find]
where = locr
